--- a/ecom/src/style/shop/shop-cart.scss
+++ b/ecom/src/style/shop/shop-cart.scss
@@ -1,4 +1,6 @@
 .shop-cart {
+    transition: all .3s ease;
+
     display: grid;
     grid-template-rows: [tog-s] 40px [tog-e con-s] 1fr [con-e];
     grid-template-columns: [s] 1fr [e];
@@ -8,10 +10,6 @@
         grid-row: tog-s/tog-e;
         grid-column: s/e;
         justify-self: end;
-
-        display: grid;
-        justify-items: center;
-        align-items: center;
     }
 
     &__content {
@@ -22,7 +20,7 @@
 
 .shop-cart {
     &__toggle {
-
+        z-index: 6;
     }
     &__content {
         height: 675px;
@@ -33,18 +31,23 @@
 }
 
 .cart-button {
+    transition: all .3s ease;
+    
     background-color: #333;
     color: white;
     font-size: 28px;
     border-radius: 25px 0 0 25px;
     height: 40px;
     width: 76px;
+
+    display: grid;
+    justify-items: center;
+    align-items: center;
 }
 
 .cart-content {
-
     display: grid;
-    grid-template-rows: 25px [title-s] 80px [title-e products-s] 1fr [products-e footer-s] 113px [footer-e];
+    grid-template-rows: 25px [title-s] 40px [title-e products-s] 1fr [products-e footer-s] 113px [footer-e];
     grid-template-columns: [footer-s] 30px [s] 1fr [e] 30px [footer-e];
 
     &__title {
@@ -54,12 +57,15 @@
         font-size: 30px;
         font-family: 'Titillium Web';
         color: #E6E6E6;
-        margin-bottom: 50px;
+        // margin-bottom: 50px;
     }
     &__products {
+        padding-top: 50px;
         grid-column: s/e;
         grid-row: products-s/products-e;
         display: grid;
+        overflow-y: scroll;
+        grid-row-gap: 45px;
     }
     &__footer {
         grid-column: footer-s/footer-e;
@@ -127,4 +133,9 @@
         font-weight: 600;
     }
 
+}
+
+
+.cart-hidden {
+    transform: translateX(520px);
 }
